# snoop

./: .gitignore  CMakeLists.txt  LICENSE
libsnoop/: CMakeLists.txt  bufferqueue.h  channel.h  constants.h  log.h  snoop.cc  snoop.h  tracer  tracer.cc  tracer.h
scripts/: clean.sh  run.sh
snooper/: SnoopWindow.ui  decoder.py  snooper.py
testapps/: CMakeLists.txt  libtest1.cc  test_1.cc  test_2.cc  test_dlopen.cc
